--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="styles.css">
 
-      <title>Khuyalunga</title>
+      <title>Construction</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -24,7 +24,7 @@
          <nav class="nav container">
             <a href="#" class="nav__logo">
                <i class="ri-building-3-line"></i>
-               <span>Khuyalunga</span>
+               <span>Construction</span>
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -293,11 +293,11 @@
             <div>
                <a href="#" class="footer__logo">
                   <i class="ri-building-3-line"></i>
-                  <span>Khuyalunga</span>
+                  <span>Arconstruction</span>
                </a>
 
                <p class="footer__description">We build security <br> and trut in homes.</p>
-               <address class="footer__email">Email: khuyalunga@gmail.com</address>
+               <address class="footer__email">Email: Arconstruction@gmail.com</address>
             </div>
 
             <div class="footer__content grid">
@@ -340,7 +340,7 @@
          </div>
 
          <span class="footer__copy">
-            &#169; All Rights Reserved By Khuyalunga
+            &#169; All Rights Reserved By Arconstruction
          </span>
       </footer>
 
@@ -360,6 +360,7 @@
    </body>
 
 </html>
+
 
 
 
